--- a/entities/snow_golem.json
+++ b/entities/snow_golem.json
@@ -1,6 +1,12 @@
 {
+  "format_version": "1.8.0",
   "minecraft:entity": {
-    "format_version": "1.2.0",
+    "description": {
+      "identifier": "minecraft:snow_golem",
+      "is_spawnable": false,
+      "is_summonable": true,
+      "is_experimental": false
+    },
 
     "component_groups": {
       "minecraft:snowgolem_leashed": {
@@ -16,9 +22,6 @@
     },
 
     "components": {
-      "minecraft:identifier": {
-        "id": "minecraft:snow_golem"
-      },
       "minecraft:type_family": {
         "family": [ "snowgolem" ]
       },
