--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,18 @@
 {
     "format_version": 2,
     "header": {
-        "description": "resourcePack.vanilla_server.description",
-        "name": "resourcePack.vanilla_server.name",
-        "uuid": "fe9f8597-5454-481a-8730-8d070a8e2e58",
+        "description": "Behavior pack making all mobs neutral",
+        "name": "Neutral Mobs",
+        "uuid": "2c4af7b9-a3ff-4e8a-b888-dc25e403fa80",
         "version": [0, 0, 1],
         "min_engine_version": [ 1, 13, 0 ]
     },
     "modules": [
         {
-            "description": "resourcePack.vanilla_server.description",
+            "description": "Behavior pack making all mobs neutral",
             "type": "data",
-            "uuid": "79fccc3b-7bad-4f4f-aa97-d98108e6aa33",
+            "uuid": "b85dcd68-798b-4767-8ee0-34e4c8ba3068",
             "version": [0, 0, 1]
         }
-    ],
-    "dependencies": [
-      {
-        "uuid": "0575c61f-a5da-4b7f-9961-ffda2908861e",
-        "version": [0, 0, 1]
-      }
     ]
 }
