--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,17 @@
 {
     "format_version": 2,
     "header": {
-        "description": "Behavior pack making all mobs neutral",
-        "name": "Neutral Mobs",
+        "name": "pack.name",
+        "description": "pack.description",
         "uuid": "2c4af7b9-a3ff-4e8a-b888-dc25e403fa80",
-        "version": [0, 0, 1],
+        "version": [1, 0, 0],
         "min_engine_version": [ 1, 13, 0 ]
     },
     "modules": [
         {
-            "description": "Behavior pack making all mobs neutral",
             "type": "data",
             "uuid": "b85dcd68-798b-4767-8ee0-34e4c8ba3068",
-            "version": [0, 0, 1]
+            "version": [1, 0, 0]
         }
     ]
 }
